--- a/app/src/main/res/layout/users_list_layout.xml
+++ b/app/src/main/res/layout/users_list_layout.xml
@@ -39,6 +39,7 @@
             android:text="connect"
             android:background="@drawable/button_background"
             android:padding="10dp"
+            android:visibility="gone"
             android:layout_gravity="center"
             android:layout_margin="10dp"
             />
